cleans up unused code

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="gr__blackrockdigital_github_io">
+
 <head>
 
     <meta charset="utf-8">
@@ -15,34 +16,21 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
-    <link rel="stylesheet" href="vendor/device-mockups/device-mockups.min.css">
+
     <!-- Theme CSS -->
-   	<link href="/assets/css/new-age.min.css" rel="stylesheet">
+    <link href="/assets/css/new-age.min.css" rel="stylesheet">
     <link href="/assets/css/burger_style.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 
 <body id="page-top" data-gr-c-s-loaded="true">
 
-   {{{body}}}
+    {{{body}}}
 
-
-   
-   <footer>
+    <footer>
         <div class="container">
-            <p>© 2017 Tummy Burger.  All Rights Reserved.</p>
+            <p>© 2018 Tummy Burger. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li>
                     <a href="https://github.com/hadicodes">Author</a>
@@ -51,7 +39,7 @@
                     <a href="https://twitter.com/hadi_codes">Hadi Yousufi</a>
                 </li>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/2017">2016</a>
+                    <a href="">2018</a>
                 </li>
             </ul>
         </div>
@@ -62,11 +50,10 @@
     <script src="/assets/js/vendor/bootstrap/js/bootstrap.min.js"></script>
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <!-- Theme JavaScript -->
-    <script src="/assets/js/new-age.min.js"></script>
+
     <script src="js/new-age.min.js"></script>
-    
-    <script type="text/javascript">( function(){ window.SIG_EXT = {}; } )()</script>
+
+    <script type="text/javascript">(function () { window.SIG_EXT = {}; })()</script>
 </body>
 
 
